Review Request 13606 - PLS-5529 buckets of same attribute are now OR'd together - TEXTAREAs nolonger have bizarre triple-spaced line wrapping - more-info bubbles now cursor: pointer; - segment tiles on :hover inner-borders light up now - AQB items right border color fixed - AQB first-child expand/collapse and + operator/attr position fixed

--- a/le-ui/projects/common/assets/sass/_forms.scss
+++ b/le-ui/projects/common/assets/sass/_forms.scss
@@ -132,6 +132,10 @@ output {
   -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
   transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
+textarea.form-control {
+  line-height: 1.25em;
+  padding: .5em;
+}
 .form-control:focus {
   border-color: #66afe9;
   outline: 0;
