--- a/le-ui/projects/common/assets/sass/_tabs.scss
+++ b/le-ui/projects/common/assets/sass/_tabs.scss
@@ -363,6 +363,7 @@ Chunky Interior Tabs (My Data, Play List, etc...)
                 font-size: 8px;
                 margin-left: 1em;
                 text-transform: none;
+                cursor: pointer;
                 .tooltip_{
                     text-align: left;
                 }
