--- a/le-ui/projects/common/assets/sass/_tiles.scss
+++ b/le-ui/projects/common/assets/sass/_tiles.scss
@@ -16,11 +16,14 @@
         border-bottom-left-radius: 6px;
         &:hover {
             transition: all 0ms ease 0s;
-            border-color: #6A9ACE;
             -webkit-box-shadow: 0px 3px 8px 0px rgba(128, 211, 239, 0.35);
             -moz-box-shadow: 0px 3px 8px 0px rgba(128, 211, 239, 0.35);
             box-shadow: 0px 3px 8px 0px rgba(128, 211, 239, 0.35);
             cursor: pointer;
+            &,& * {
+                border-color: #6A9ACE;
+                transition: none;
+            }
         }
         &:active {
             border-color: #72b8e8;
@@ -212,7 +215,7 @@
         padding: 0px 13px;
     }
     .account-count {
-        border-right: 1px solid grey; 
+        border-right: 1px solid #ddd; 
         text-align: left; 
         padding: 8px
     }
