--- a/le-ui/projects/common/components/datacloud/query/advanced/tree/tree.component.scss
+++ b/le-ui/projects/common/components/datacloud/query/advanced/tree/tree.component.scss
@@ -159,7 +159,7 @@ div.advanced-query-builder {
             background: white;
 //             border: 1px solid #ccc;
             border-left: 5px solid #999;
-            border-right: 1px solid #ddd;
+            border-right: 1px solid #ddd !important;
             display: flex;
             cursor: default;
             z-index: 1;
@@ -574,7 +574,7 @@ div.advanced-query-builder {
             }
 
             &.query-section-item-end:first-child div.query-section-item-end {
-                top: 0.75em;
+                top: -0.75em;
             }
         }
 
@@ -718,7 +718,7 @@ div.advanced-query-builder {
             }
             
             &> div > .query-section-label > .query-section-label-expand {
-                top: 2em;
+                top: 1.6em;
             }
         }
     }
